; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_vht.c_ieee80211_vht_update_cap.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_vht.c_ieee80211_vht_update_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee80211_vht_update_cap(%struct.ieee80211_node* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.ieee80211_node*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.ieee80211_node* %0, %struct.ieee80211_node** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.ieee80211_node*, %struct.ieee80211_node** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @ieee80211_parse_vhtcap(%struct.ieee80211_node* %7, i32* %8)
  %10 = load %struct.ieee80211_node*, %struct.ieee80211_node** %4, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @ieee80211_parse_vhtopmode(%struct.ieee80211_node* %10, i32* %11)
  ret void
}

declare dso_local i32 @ieee80211_parse_vhtcap(%struct.ieee80211_node*, i32*) #1

declare dso_local i32 @ieee80211_parse_vhtopmode(%struct.ieee80211_node*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
